--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGODB_URI='mongodb+srv://fallingsakura:dbw686687@atlascluster.n18lf.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
+MONGODB_URI='mongodb+srv://fallingsakura:dbw686687@atlascluster.n18lf.mongodb.net/?retryWrites=true&w=majority&appName=AtlasCluster'
+MONGOOSE_URI='mongodb+srv://fallingsakura:dbw686687@atlascluster.n18lf.mongodb.net/calendar?retryWrites=true&w=majority'
 JWT_SECRET='fallingsakura'
